--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo"><img src="assets/logo1.png"></div>
+      <div class="logo"><img src="assets/logo1.png" /></div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -21,7 +21,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo"><img src="assets/logo.png" alt=""></div>
+      <div class="logo"><img src="assets/logo.png" alt="" /></div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -43,7 +43,7 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Saron Assfaw</h1>
-        <p class="section__text__p2">Frontend Developer</p>
+        <p class="section__text__p2">FullStack Developer</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -92,6 +92,7 @@
               />
               <h3>Experience</h3>
               <p>3 Months <br />Internship Screen Design</p>
+              <p>1.5 years<br />Screen Designer</p>
             </div>
             <div class="details-container">
               <img
@@ -100,18 +101,15 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>IU University of Applied Sciences<br />Hamburg Coding School</p>
+              <p>Heinze Akademie</p>
+              <br />
+              <p>
+                IU University of Applied Sciences<br />Hamburg Coding School
+              </p>
             </div>
           </div>
           <div class="text-container">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
-            </p>
+            <p>I create Webs</p>
           </div>
         </div>
       </div>
@@ -263,11 +261,7 @@
         <div class="about-containers">
           <div class="details-container color-container">
             <div class="article-container">
-              <img
-                src="./assets/sc2.png"
-                alt="Project 1"
-                class="project-img"
-              />
+              <img src="./assets/sc2.png" alt="Project 1" class="project-img" />
             </div>
             <h2 class="experience-sub-title project-title">Project One</h2>
             <div class="btn-container">
@@ -287,11 +281,7 @@
           </div>
           <div class="details-container color-container">
             <div class="article-container">
-              <img
-                src="./assets/sc1.png"
-                alt="Project 2"
-                class="project-img"
-              />
+              <img src="./assets/sc1.png" alt="Project 2" class="project-img" />
             </div>
             <h2 class="experience-sub-title project-title">Project Two</h2>
             <div class="btn-container">
@@ -311,11 +301,7 @@
           </div>
           <div class="details-container color-container">
             <div class="article-container">
-              <img
-                src="./assets/sc1.png"
-                alt="Project 3"
-                class="project-img"
-              />
+              <img src="./assets/sc3.png" alt="Project 3" class="project-img" />
             </div>
             <h2 class="experience-sub-title project-title">Project Three</h2>
             <div class="btn-container">
@@ -352,7 +338,9 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:saron.assfaw@outlook.de">saron.assfaw@outlook.de</a></p>
+          <p>
+            <a href="mailto:saron.assfaw@outlook.de">saron.assfaw@outlook.de</a>
+          </p>
         </div>
         <div class="contact-info-container">
           <img
@@ -360,7 +348,12 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://de.linkedin.com/in/saron-a-83853b29a?trk=public_profile_browsemap-profile">LinkedIn</a></p>
+          <p>
+            <a
+              href="https://de.linkedin.com/in/saron-a-83853b29a?trk=public_profile_browsemap-profile"
+              >LinkedIn</a
+            >
+          </p>
         </div>
       </div>
     </section>
