--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo"><img src="assets/logo1.png" /></div>
+      <div class="logo"><img src="assets/logo2.png" /></div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -21,7 +21,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo"><img src="assets/logo.png" alt="" /></div>
+      <div class="logo"><img src="assets/logo2.png" class="fadeInUp" alt="" /></div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -38,16 +38,16 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/me.png" alt="Saron Assfaw profile picture" />
+        <img src="./assets/me.png" class="fadeInUp" alt="Saron Assfaw profile picture" />
       </div>
       <div class="section__text">
-        <p class="section__text__p1">Hello, I'm</p>
+        <p class="section__text__p1">I'm</p>
         <h1 class="title">Saron Assfaw</h1>
         <p class="section__text__p2">FullStack Developer</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-saron.pdf')"
+            onclick="window.open('./assets/resume-s.pdf')"
           >
             Download CV
           </button>
@@ -80,6 +80,7 @@
             src="./assets/profile_1.png"
             alt="Profile picture"
             class="about-pic"
+            
           />
         </div>
         <div class="about-details-container">
@@ -102,14 +103,16 @@
               />
               <h3>Education</h3>
               <p>Heinze Akademie</p>
-              <br />
+
               <p>
                 IU University of Applied Sciences<br />Hamburg Coding School
               </p>
             </div>
           </div>
           <div class="text-container">
-            <p>I create Webs</p>
+            <p>
+              I'm a Junior Web Developer, Graphic Designer and FreeLance Artist.
+            </p>
           </div>
         </div>
       </div>
@@ -157,7 +160,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SASS</h3>
+                  <h3>Node JS</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -179,8 +182,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>TypeScript</h3>
-                  <p>Basic</p>
+                  <h3>Vue</h3>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -197,7 +200,7 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">Other Tools/Languages</h2>
             <div class="article-container">
               <article>
                 <img
@@ -206,7 +209,18 @@
                   class="icon"
                 />
                 <div>
-                  <h3>PostgreSQL</h3>
+                  <h3>SQL</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>MongoDB</h3>
                   <p>Basic</p>
                 </div>
               </article>
@@ -217,7 +231,29 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Node JS</h3>
+                  <h3>Spline</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Blender</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Illustrator</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -228,19 +264,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Express JS</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Git</h3>
-                  <p>Intermediate</p>
+                  <h3>Procreate</h3>
+                  <p>Expert</p>
                 </div>
               </article>
             </div>
@@ -265,6 +290,7 @@
             </div>
             <h2 class="experience-sub-title project-title">Project One</h2>
             <div class="btn-container">
+              
               <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/saronassfaw/aroundtheworld'"
@@ -278,12 +304,14 @@
                 Live Demo
               </button>
             </div>
+            <p>The main emphasis was to create a travelblog with an interactive map using Map Api and Vue.js</p>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img src="./assets/sc1.png" alt="Project 2" class="project-img" />
             </div>
             <h2 class="experience-sub-title project-title">Project Two</h2>
+
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -298,6 +326,7 @@
                 Live Demo
               </button>
             </div>
+            <p>The focus was to create a one pager with a booking container that allows you to add travellers in categories</p>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
@@ -318,6 +347,7 @@
                 Live Demo
               </button>
             </div>
+            <p>An Website integrated with GenshinApi that changes randomly after a click</p>
           </div>
         </div>
       </div>
