--- a/index.html
+++ b/index.html
@@ -153,17 +153,7 @@
                   <p>Experienced</p>
                 </div>
               </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Node JS</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
+   
               <article>
                 <img
                   src="./assets/checkmark.png"
@@ -193,6 +183,17 @@
                   class="icon"
                 />
                 <div>
+                  <h3>PHP</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
                   <h3>Material UI</h3>
                   <p>Intermediate</p>
                 </div>
@@ -200,8 +201,19 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Other Tools/Languages</h2>
+            <h2 class="experience-sub-title">Back End and other Tools</h2>
             <div class="article-container">
+                         <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Node JS</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
               <article>
                 <img
                   src="./assets/checkmark.png"
@@ -257,17 +269,7 @@
                   <p>Intermediate</p>
                 </div>
               </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Procreate</h3>
-                  <p>Expert</p>
-                </div>
-              </article>
+            
             </div>
           </div>
         </div>
@@ -398,7 +400,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+    
     </footer>
     <script src="script.js"></script>
   </body>
