--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Back End and other Tools</h2>
+            <h2 class="experience-sub-title">Back End & other Skills</h2>
             <div class="article-container">
                          <article>
                 <img
