--- a/index.html
+++ b/index.html
@@ -103,10 +103,8 @@
               />
               <h3>Education</h3>
               <p>Heinze Akademie</p>
-
-              <p>
-                IU University of Applied Sciences<br />Hamburg Coding School
-              </p>
+              <p>Hamburg Coding School</p>
+              
             </div>
           </div>
           <div class="text-container">
@@ -162,7 +160,7 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -184,7 +182,7 @@
                 />
                 <div>
                   <h3>PHP</h3>
-                  <p>Intermediate</p>
+                  <p>Basic</p>
                 </div>
               </article>
               <article>
@@ -203,7 +201,7 @@
           <div class="details-container">
             <h2 class="experience-sub-title">Back End & other Skills</h2>
             <div class="article-container">
-                         <article>
+                      <article>
                 <img
                   src="./assets/checkmark.png"
                   alt="Experience icon"
