--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <div class="logo"><img src="assets/logo2.png" /></div>
       <div>
         <ul class="nav-links">
-          <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#about">Über mich</a></li>
+          <li><a href="#experience">Erfahrung</a></li>
+          <li><a href="#projects">Projekte</a></li>
+          <li><a href="#contact">Kontakt</a></li>
         </ul>
       </div>
     </nav>
@@ -29,10 +29,10 @@
           <span></span>
         </div>
         <div class="menu-links">
-          <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-          <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+          <li><a href="#about" onclick="toggleMenu()">Über mich</a></li>
+          <li><a href="#experience" onclick="toggleMenu()">Erfahrung</a></li>
+          <li><a href="#projects" onclick="toggleMenu()">Projekte</a></li>
+          <li><a href="#contact" onclick="toggleMenu()">Kontakt</a></li>
         </div>
       </div>
     </nav>
@@ -52,7 +52,7 @@
             Download CV
           </button>
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
-            Contact Info
+            Kontakt Info
           </button>
         </div>
         <div id="socials-container">
@@ -72,8 +72,8 @@
       </div>
     </section>
     <section id="about">
-      <p class="section__text__p1">Get To Know More</p>
-      <h1 class="title">About Me</h1>
+      <p class="section__text__p1">Lerne miche kennen</p>
+      <h1 class="title">Über mich</h1>
       <div class="section-container">
         <div class="section__pic-container">
           <img
@@ -91,9 +91,9 @@
                 alt="Experience icon"
                 class="icon"
               />
-              <h3>Experience</h3>
-              <p>3 Months <br />Internship Screen Design</p>
-              <p>1.5 years<br />Screen Designer</p>
+              <h3>Berufserfahrung</h3>
+              <p>3 Monate <br />Praktikum Screen Design</p>
+              <p>1.5 Jahre<br />Screen Designer</p>
             </div>
             <div class="details-container">
               <img
@@ -101,7 +101,7 @@
                 alt="Education icon"
                 class="icon"
               />
-              <h3>Education</h3>
+              <h3>Bildung</h3>
               <p>Heinze Akademie</p>
               <p>Hamburg Coding School</p>
               
@@ -109,7 +109,7 @@
           </div>
           <div class="text-container">
             <p>
-              I'm a Junior Web Developer, Graphic Designer and FreeLance Artist.
+              Ich bin ein Junior Developer, Screen Designer und Hobby Künstler.
             </p>
           </div>
         </div>
@@ -280,7 +280,7 @@
       />
     </section>
     <section id="projects">
-      <p class="section__text__p1">Browse My Recent</p>
+      <p class="section__text__p1">Stöber meine letzen Projekte</p>
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
         <div class="about-containers">
@@ -288,7 +288,7 @@
             <div class="article-container">
               <img src="./assets/sc2.png" alt="Project 1" class="project-img" />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Project Eins</h2>
             <div class="btn-container">
               
               <button
@@ -304,13 +304,13 @@
                 Live Demo
               </button>
             </div>
-            <p>The main emphasis was to create a travelblog with an interactive map using Map Api and Vue.js</p>
+            <p>Aufgabe war es ein Reiseblog mit Vue.js zu programmieren. Der Schwerpunkt war es eine interaktive Karte über Mapbox zu kreieren und intergieren.</p>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img src="./assets/sc1.png" alt="Project 2" class="project-img" />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">Project Zwei</h2>
 
             <div class="btn-container">
               <button
@@ -326,13 +326,13 @@
                 Live Demo
               </button>
             </div>
-            <p>The focus was to create a one pager with a booking container that allows you to add travellers in categories</p>
+            <p>Der Fokus war es ein Buchungs-Container mit Javascript zu erstellen, der in Kategorien aufgeteilt ist und ein intergierten Rechner besitzt.</p>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img src="./assets/sc3.png" alt="Project 3" class="project-img" />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">Project Drei</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -347,7 +347,7 @@
                 Live Demo
               </button>
             </div>
-            <p>An Website integrated with GenshinApi that changes randomly after a click</p>
+            <p>Hier war der Auftrag ein API zu intergieren, der mit einem Klick Dir zufällige Daten in den gegebenen Boxen ausspuckt.</p>
           </div>
         </div>
       </div>
@@ -359,8 +359,8 @@
       />
     </section>
     <section id="contact">
-      <p class="section__text__p1">Get in Touch</p>
-      <h1 class="title">Contact Me</h1>
+      <p class="section__text__p1">Lass uns in Kontakt bleiben</p>
+      <h1 class="title">Kontaktiere Mich</h1>
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
@@ -391,10 +391,10 @@
       <nav>
         <div class="nav-links-container">
           <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">Über Mich</a></li>
+            <li><a href="#experience">Erfahrung</a></li>
+            <li><a href="#projects">Projekte</a></li>
+            <li><a href="#contact">Kontakt</a></li>
           </ul>
         </div>
       </nav>
