--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
       />
     </section>
     <section id="experience">
-      <p class="section__text__p1">Explore My</p>
-      <h1 class="title">Experience</h1>
+      <p class="section__text__p1">Entdecke meine</p>
+      <h1 class="title">Erfahrungen</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
@@ -137,7 +137,7 @@
                 />
                 <div>
                   <h3>HTML</h3>
-                  <p>Experienced</p>
+                  <p>Erfahren</p>
                 </div>
               </article>
               <article>
@@ -148,7 +148,7 @@
                 />
                 <div>
                   <h3>CSS</h3>
-                  <p>Experienced</p>
+                  <p>Erfahren</p>
                 </div>
               </article>
    
@@ -160,7 +160,7 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Intermediate</p>
+                  <p>Fortgeschritten</p>
                 </div>
               </article>
               <article>
@@ -171,7 +171,7 @@
                 />
                 <div>
                   <h3>Vue</h3>
-                  <p>Intermediate</p>
+                  <p>Fortgeschritten</p>
                 </div>
               </article>
               <article>
@@ -182,7 +182,7 @@
                 />
                 <div>
                   <h3>PHP</h3>
-                  <p>Basic</p>
+                  <p>Grundlegend</p>
                 </div>
               </article>
               <article>
@@ -193,13 +193,13 @@
                 />
                 <div>
                   <h3>Material UI</h3>
-                  <p>Intermediate</p>
+                  <p>Fortgeschritten</p>
                 </div>
               </article>
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Back End & other Skills</h2>
+            <h2 class="experience-sub-title">Back End & andere Fähigkeiten</h2>
             <div class="article-container">
                       <article>
                 <img
@@ -209,7 +209,7 @@
                 />
                 <div>
                   <h3>Node JS</h3>
-                  <p>Intermediate</p>
+                  <p>Fortgeschritten</p>
                 </div>
               </article>
               <article>
@@ -220,7 +220,7 @@
                 />
                 <div>
                   <h3>SQL</h3>
-                  <p>Intermediate</p>
+                  <p>Fortgeschritten</p>
                 </div>
               </article>
               <article>
@@ -231,7 +231,7 @@
                 />
                 <div>
                   <h3>MongoDB</h3>
-                  <p>Basic</p>
+                  <p>Grundlegend</p>
                 </div>
               </article>
               <article>
@@ -242,7 +242,7 @@
                 />
                 <div>
                   <h3>Spline</h3>
-                  <p>Basic</p>
+                  <p>Grundlegend</p>
                 </div>
               </article>
               <article>
@@ -253,7 +253,7 @@
                 />
                 <div>
                   <h3>Blender</h3>
-                  <p>Basic</p>
+                  <p>Grundlegend</p>
                 </div>
               </article>
               <article>
@@ -264,7 +264,7 @@
                 />
                 <div>
                   <h3>Illustrator</h3>
-                  <p>Intermediate</p>
+                  <p>Fortgeschritten</p>
                 </div>
               </article>
             
@@ -280,8 +280,8 @@
       />
     </section>
     <section id="projects">
-      <p class="section__text__p1">Stöber meine letzen Projekte</p>
-      <h1 class="title">Projects</h1>
+      <p class="section__text__p1">Stöbere meine letzen Projekte</p>
+      <h1 class="title">Projekte</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
@@ -304,7 +304,7 @@
                 Live Demo
               </button>
             </div>
-            <p>Aufgabe war es ein Reiseblog mit Vue.js zu programmieren. Der Schwerpunkt war es eine interaktive Karte über Mapbox zu kreieren und intergieren.</p>
+            <p>Aufgabe war es ein Reiseblog mit Vue.js zu programmieren. Der Schwerpunkt war es eine interaktive Karte über Mapbox zu kreieren und zu intergieren.</p>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
@@ -326,7 +326,7 @@
                 Live Demo
               </button>
             </div>
-            <p>Der Fokus war es ein Buchungs-Container mit Javascript zu erstellen, der in Kategorien aufgeteilt ist und ein intergierten Rechner besitzt.</p>
+            <p>Der Fokus war es ein Buchungs-Container mit Javascript zu erstellen. Dieser sollte in Kategorien aufgeteilt sein und ein intergierten Rechner besitzen.</p>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
