--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img src="./assets/me.png" class="fadeInUp" alt="Saron Assfaw profile picture" />
       </div>
       <div class="section__text">
-        <p class="section__text__p1">I'm</p>
+        <p class="section__text__p1">Hi Ich bin</p>
         <h1 class="title">Saron Assfaw</h1>
         <p class="section__text__p2">FullStack Developer</p>
         <div class="btn-container">
@@ -72,7 +72,7 @@
       </div>
     </section>
     <section id="about">
-      <p class="section__text__p1">Lerne miche kennen</p>
+      <p class="section__text__p1">Lerne mich kennen</p>
       <h1 class="title">Über mich</h1>
       <div class="section-container">
         <div class="section__pic-container">
