--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img src="./assets/me.png" class="fadeInUp" alt="Saron Assfaw profile picture" />
       </div>
       <div class="section__text">
-        <p class="section__text__p1">Hi Ich bin</p>
+        <p class="section__text__p1">Hi, ich bin</p>
         <h1 class="title">Saron Assfaw</h1>
         <p class="section__text__p2">FullStack Developer</p>
         <div class="btn-container">
