--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
       />
     </section>
     <section id="projects">
-      <p class="section__text__p1">Stöbere meine letzen Projekte</p>
+      <p class="section__text__p1">Durchstöbere meine letzen Projekte</p>
       <h1 class="title">Projekte</h1>
       <div class="experience-details-container">
         <div class="about-containers">
