--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
               </button>
             </div>
             <p>
-              Aufgabe war es ein Reiseblog mit Vue.js zu programmieren. Der
+              Die Aufgabe war es ein Reiseblog mit Vue.js zu programmieren. Der
               Schwerpunkt war es eine interaktive Karte über Mapbox zu kreieren
               und zu intergieren.
             </p>
